@@ -1,5 +1,6 @@
 - decorators created with @decorator are now able to pass additional args and kwargs
 - export @collecting and @joining from funcy
+- better handling passing None to optional parameter
 
 0.4.0
 - extended predicate/mapping semantics for seq and coll utils
